Fixing the buttons-not showing up on chrome after pushing (?)

--- a/public/css/add-on.css
+++ b/public/css/add-on.css
@@ -1133,7 +1133,6 @@
      background: transparent;
      color: #017EA4;
      opacity:.7;
-     float:left;
      }
 
    .share-btn.linkedin {
@@ -1141,7 +1140,6 @@
      background: transparent;
      color: #017EA4;
      opacity:.7;
-     float:left;
      }
 
    .share-btn.email {
@@ -1149,5 +1147,4 @@
      background: transparent;
      color: #017EA4;
      opacity:.7;
-     float:left;
      }
